@startuml

title __LAB1's Class Diagram__\n

  namespace Nonpattern {
    class Nonpattern.CourseRecord {
    }
  }
  

  namespace Nonpattern {
    class Nonpattern.CourseViewer {
    }
  }
  

  namespace Nonpattern {
    class Nonpattern.LayoutConstants {
    }
  }
  

  namespace Pattern {
    class Pattern.BarChartObserver {
    }
  }
  

  namespace Pattern {
    class Pattern.CourseController {
    }
  }
  

  namespace Pattern {
    class Pattern.CourseData {
    }
  }
  

  namespace Pattern {
    class Pattern.CourseRecord {
    }
  }
  

  namespace Pattern {
    class Pattern.LayoutConstants {
    }
  }
  

  namespace Pattern {
    abstract class Pattern.Observable {
    }
  }
  

  namespace Pattern {
    interface Pattern.Observer {
    }
  }
  

  namespace Pattern {
    class Pattern.PieChartObserver {
    }
  }
  

  Nonpattern.CourseViewer .up.|> java.awt.event.ActionListener
  Nonpattern.CourseViewer .up.|> javax.swing.event.ChangeListener
  Nonpattern.CourseViewer -up-|> javax.swing.JFrame
  Pattern.BarChartObserver .up.|> Pattern.Observer
  Pattern.BarChartObserver -up-|> javax.swing.JPanel
  Pattern.CourseController .up.|> Pattern.Observer
  Pattern.CourseController .up.|> java.awt.event.ActionListener
  Pattern.CourseController .up.|> javax.swing.event.ChangeListener
  Pattern.CourseController -up-|> javax.swing.JPanel
  Pattern.CourseController o-- Pattern.CourseData : courseData
  Pattern.CourseData -up-|> Pattern.Observable
  Pattern.PieChartObserver .up.|> Pattern.Observer
  Pattern.PieChartObserver -up-|> javax.swing.JPanel


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
